Changelog
=========

1.0 - Unreleased
----------------

* overrode temporarily inline_validation.js see.:https://github.com/plone/Products.CMFPlone/pull/56 [giorgio]
* added test users [giorgio]
* check if c.transmogrifier is installed [giorgio]
* switch simplemanagement to collective namespace
* added transmogrify.dexterity
* added plone.app.toolbar
* changed profile titles
* changed pipeline to import test content
* added simplemanagement and other dependencies