@@ -49,9 +49,5 @@
 
   <include file="upgrades.zcml" />
 
-  <!-- -*- extra stuff goes here -*- -->
-  <configure zcml:condition="installed collective.transmogrifier">
-    <include file="load_content.zcml" />
-  </configure>
 
 </configure>
