@@ -1,52 +1,0 @@
-_path,_type,ct_type,title,_transitions,description,operatives,creators,start,end,budget,initial_estimate,customer,notes,text,estimate,assigned_to,repositories,environments,milestones,is_external,date,time
-/projects,Folder,archetype,Progetti,publish,Una cartella contentente i progetti,,admin,,,,,,,,,,,,,,,
-/documentation,Folder,archetype,Documentazione,publish,Una cartella contentente documentazione generica,,admin,,,,,,,,,,,,,,,
-/projects/progetto1,Project,dexterity,Progetto 1,development_start,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod","(('account', u'admin'), ('designer', u'admin'))",admin,,,10,12,Customer 2,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,,,"(u'https://github.com/abstract-open-solutions/simplemanagement.policy', u'https://github.com/collective/collective.simplemanagement')","((u'Demo Plone 4', 'prototype', 'http://plone4.abstract.it'), (u'Official site', 'production', 'http://www.abstract.it'), (u'Open abstract', 'production', 'http://open.abstract.it/'))","((u'Step 1', 'production'), (u'Step 2', 'maintenance'),)",1,,
-/projects/progetto1/iteration1,Iteration,dexterity,Iterazione 1.1,activate:complete,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,admin,-10d,-3d,,,,,,0,,,,,,,
-/projects/progetto1/iteration1/story1,Story,dexterity,Storia 1.1.1,start:complete,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,admin,,,,,,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",3,employee1,,,,,,
-/projects/progetto1/iteration1/story1/booking1,Booking,dexterity,Booking 1.1.1.1,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,employee1,,,,,,,,,,,,,,-10d,1
-/projects/progetto1/iteration1/story1/booking2,Booking,dexterity,Booking 1.1.1.2,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,employee1,,,,,,,,,,,,,,-9d,2
-/projects/progetto1/iteration1/story1/booking3,Booking,dexterity,Booking 1.1.1.3,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,employee1,,,,,,,,,,,,,,-9d,2
-/projects/progetto1/iteration1/story2,Story,dexterity,Storia 1.1.2,start:complete,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,admin,,,,,,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",2,employee1,,,,,,
-/projects/progetto1/iteration1/story2/booking1,Booking,dexterity,Booking 1.1.2.1,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,employee1,,,,,,,,,,,,,,-5d,2
-/projects/progetto1/iteration1/story3,Story,dexterity,Storia 1.1.3,start:complete,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,admin,,,,,,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",6,employee1,,,,,,
-/projects/progetto1/iteration1/story3/booking1,Booking,dexterity,Booking 1.1.3.1,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,employee1,,,,,,,,,,,,,,-4d,4
-/projects/progetto1/iteration1/story3/booking2,Booking,dexterity,Booking 1.1.3.2,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,employee1,,,,,,,,,,,,,,-4d,2
-/projects/progetto1/iteration1/story3/booking3,Booking,dexterity,Booking 1.1.3.3,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,employee2,,,,,,,,,,,,,,-4d,1
-/projects/progetto1/iteration2,Iteration,dexterity,Iterazione 1.2,activate,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,admin,+0d,+1w,,,,,,0,,,,,,,
-/projects/progetto1/iteration2/story1,Story,dexterity,Storia 1.2.1,start,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,admin,,,,,,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",4,employee1,,,,,,
-/projects/progetto1/iteration2/story2,Story,dexterity,Storia 1.2.2,start,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,admin,,,,,,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",6,employee1,,,,,,
-/projects/progetto1/iteration2/story3,Story,dexterity,Storia 1.2.3,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,admin,,,,,,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",1,employee2,,,,,,
-/projects/progetto1/iteration3,Iteration,dexterity,Iterazione 1.3,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,admin,+1w,+2w,,,,,,0,,,,,,,
-/projects/progetto1/iteration3/story1,Story,dexterity,Storia 1.3.1,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,admin,,,,,,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",4,employee2,,,,,,
-/projects/progetto1/iteration3/story2,Story,dexterity,Storia 1.3.2,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,admin,,,,,,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",6,employee2,,,,,,
-/projects/progetto1/iteration3/story3,Story,dexterity,Storia 1.3.3,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,admin,,,,,,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",5,employee2,,,,,,
-/projects/progetto1/iteration4,Iteration,dexterity,Iterazione 1.4,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,admin,+3w,+4w,,,,,,0,,,,,,,
-/projects/progetto1/iteration4/story1,Story,dexterity,Storia 1.4.1,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,admin,,,,,,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",4,employee1,,,,,,
-/projects/progetto1/iteration4/story2,Story,dexterity,Storia 1.4.2,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,admin,,,,,,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",5,employee1,,,,,,
-/projects/progetto1/iteration4/story3,Story,dexterity,Storia 1.4.3,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,admin,,,,,,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",2,employee2,,,,,,
-,,,,,,,,,,,,,,,,,,,,,,
-/projects/progetto2,Project,dexterity,Progetto 2,development_start,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod","(('account', u'admin'), ('designer', u'admin'))",admin,,,10,12,Customer 2,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,,,"(u'https://github.com/abstract-open-solutions/simplemanagement.policy', u'https://github.com/collective/collective.simplemanagement')","((u'Demo Plone 4', 'prototype', 'http://plone4.abstract.it'), (u'Official site', 'production', 'http://www.abstract.it'), (u'Open abstract', 'production', 'http://open.abstract.it/'))","((u'Step 1', 'production'), (u'Step 2', 'maintenance'),)",0,,
-/projects/progetto2/iteration1,Iteration,dexterity,Iterazione 2.1,activate:complete,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,admin,-4w,-3w,,,,,,0,,,,,,,
-/projects/progetto2/iteration1/story1,Story,dexterity,Storia 2.1.1,start:complete,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,admin,,,,,,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",3,employee1,,,,,,
-/projects/progetto2/iteration1/story1/booking1,Booking,dexterity,Booking 2.1.1.1,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,employee2,,,,,,,,,,,,,,-30d,1
-/projects/progetto2/iteration1/story1/booking2,Booking,dexterity,Booking 2.1.1.2,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,employee2,,,,,,,,,,,,,,-28d,2
-/projects/progetto2/iteration1/story1/booking3,Booking,dexterity,Booking 2.1.1.3,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,employee2,,,,,,,,,,,,,,-28d,2
-/projects/progetto2/iteration1/story2,Story,dexterity,Storia 2.1.2,start:complete,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,admin,,,,,,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",2,employee1,,,,,,
-/projects/progetto2/iteration1/story2/booking1,Booking,dexterity,Booking 2.1.2.1,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,employee1,,,,,,,,,,,,,,-26d,2
-/projects/progetto2/iteration1/story3,Story,dexterity,Storia 2.1.3,start:complete,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,admin,,,,,,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",6,admin,,,,,,
-/projects/progetto2/iteration1/story3/booking1,Booking,dexterity,Booking 2.1.3.1,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,employee1,,,,,,,,,,,,,,-22d,4
-/projects/progetto2/iteration1/story3/booking2,Booking,dexterity,Booking 2.1.3.2,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,employee1,,,,,,,,,,,,,,-22d,2
-/projects/progetto2/iteration1/story3/booking3,Booking,dexterity,Booking 2.1.3.3,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,employee1,,,,,,,,,,,,,,-21d,1
-/projects/progetto2/iteration2,Iteration,dexterity,Iterazione 2.2,activate,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,admin,-1w,+0d,,,,,,0,,,,,,,
-/projects/progetto2/iteration2/story1,Story,dexterity,Storia 2.2.1,start:complete,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,admin,,,,,,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",4,employee2,,,,,,
-/projects/progetto2/iteration2/story2,Story,dexterity,Storia 2.2.2,start:complete,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,admin,,,,,,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",6,employee2,,,,,,
-/projects/progetto2/iteration2/story3,Story,dexterity,Storia 2.2.3,start:complete,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,admin,,,,,,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",1,employee1,,,,,,
-/projects/progetto2/iteration3,Iteration,dexterity,Iterazione 2.3,activate,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,admin,+0d,+1w,,,,,,0,,,,,,,
-/projects/progetto2/iteration3/story1,Story,dexterity,Storia 2.3.1,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,admin,,,,,,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",4,employee1,,,,,,
-/projects/progetto2/iteration3/story2,Story,dexterity,Storia 2.3.2,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,admin,,,,,,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",6,employee1,,,,,,
-/projects/progetto2/iteration3/story3,Story,dexterity,Storia 2.3.3,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,admin,,,,,,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",5,employee1,,,,,,
-/projects/progetto2/iteration4,Iteration,dexterity,Iterazione 2.4,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,admin,+3w,+4w,,,,,,0,,,,,,,
-/projects/progetto2/iteration4/story1,Story,dexterity,Storia 2.4.1,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,admin,,,,,,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",4,employee1,,,,,,
-/projects/progetto2/iteration4/story2,Story,dexterity,Storia 2.4.2,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,admin,,,,,,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",5,employee1,,,,,,
-/projects/progetto2/iteration4/story3,Story,dexterity,Storia 2.4.3,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,admin,,,,,,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",2,admin,,,,,,
