@@ -1,42 +1,0 @@
-<configure
-    xmlns="http://namespaces.zope.org/zope"
-    xmlns:five="http://namespaces.zope.org/five"
-    xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
-    xmlns:transmogrifier="http://namespaces.plone.org/transmogrifier"
-    i18n_domain="simplemanagement.policy">
-
-    <include package="collective.transmogrifier" file="meta.zcml"/>
-    <include package="collective.transmogrifier.sections"/>
-
-    <genericsetup:registerProfile
-        name="loadcontent"
-        title="Simple management policy (Load content)"
-        directory="profiles/loadcontent"
-        description="Load default content of the simplemanagement.policy package"
-        provides="Products.GenericSetup.interfaces.EXTENSION"
-        />
-
-    <genericsetup:importStep
-        name="load_content"
-        title="Setup extra develop steps"
-        description=""
-        handler=".setuphandlers.load_content">
-      <depends name="plone-final"/>
-    </genericsetup:importStep>
-
-    <genericsetup:importStep
-        name="create_users"
-        title="Setup users for testing"
-        description=""
-        handler=".setuphandlers.create_users">
-      <depends name="plone-final"/>
-    </genericsetup:importStep>
-
-
-    <transmogrifier:registerConfig
-         name="load_content"
-         title="Load content"
-         configuration="load_content.cfg"
-         />
-
-</configure>
